Implement control form.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,60 @@
     <div id="app" class="container">
       <div class="card">
         <div class="card-body">
-          <!-- Form -->
+          <form id="controlForm" class="row g-3">
+            <div class="col">
+              <div class="mb-3">
+                <label for="positiveGoalValue" class="form-label">Positive goal value</label>
+                <input type="number" class="form-control" id="positiveGoalValue" name="positiveGoalValue" value="100">
+              </div>
+              <div class="mb-3">
+                <label for="movementCost" class="form-label">Movement cost</label>
+                <input type="number" class="form-control" id="movementCost" name="movementCost" value="0">
+              </div>
+              <div class="mb-3">
+                <label for="learningRate" class="form-label">Learning rate (Q-Learning)</label>
+                <input type="number" class="form-control" id="learningRate" name="learningRate" value="0.1">
+              </div>
+            </div>
+            <div class="col">
+              <div class="mb-3">
+                <label for="negativeGoalValue" class="form-label">Negative goal value</label>
+                <input type="number" class="form-control" id="negativeGoalValue" name="negativeGoalValue" value="-100">
+              </div>
+              <div class="mb-3">
+                <label for="movementNoiseProbability" class="form-label">Movement noise probability</label>
+                <input type="number" class="form-control" id="movementNoiseProbability" name="movementNoiseProbability" value="0.0">
+              </div>
+              <div class="mb-3">
+                <label for="explorationRate" class="form-label">Exploration rate (Q-Learning)</label>
+                <input type="number" class="form-control" id="explorationRate" name="explorationRate" value="0.3">
+              </div>
+            </div>
+            <div class="col">
+              <div class="mb-3">
+                <label for="discountFactor" class="form-label">Discount factor</label>
+                <input type="number" class="form-control" id="discountFactor" name="discountFactor" value="1.0">
+              </div>
+              <div class="mb-3">
+                <label class="form-label">Method</label>
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="method" id="methodValueIteration" value="ValueIteration" checked>
+                  <label class="form-check-label" for="methodValueIteration">
+                    Value Iteration
+                  </label>
+                </div>
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="method" id="methodQLearning" value="QLearning">
+                  <label class="form-check-label" for="methodQLearning">
+                    Q-Learning
+                  </label>
+                </div>
+              </div>
+              <div class="mb-3" style="padding-top: 19px;">
+                <button type="submit" class="btn btn-primary">Run</button>
+              </div>
+            </div>
+          </form>
         </div>
       </div>
 
